# DevOps-Course-Starter

./: .dockerignore  .env.j2  .env.swp  .env.template  .env.test  Dockerfile  Inventory  Kat_playbook  README.md  app_run.py  docker-compose.yml  flask.sh  gunicorn.sh  pyproject.toml  todoapp.service
.github/workflows/: my-ci-pipeline.yml
todo_app/: app.py  class_items.py  get_a_board.py  intergration_tests.py  test_view_model.py  unit_tests.py  vie_model_class.py  view_model_class.py
todo_app/data/: trello_items.py
todo_app/templates/: index.html
